feat: configure to update company info

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "qrcode-generator": "^2.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.1",
     "recharts": "^3.5.0"
   },
   "devDependencies": {
