--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.554.0",
     "mercadopago": "^2.11.0",
     "next": "16.0.7",
+    "payment": "^2.4.7",
     "qrcode-generator": "^2.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/payment": "^2.1.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
