--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "updatetypes:advanced": "./scripts/sync-backend-types-advanced.sh"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@mercadopago/sdk-react": "^1.0.6",
     "@tanstack/react-query": "^5.90.11",
     "date-fns": "^4.1.0",
@@ -24,7 +27,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
-    "recharts": "^3.5.0"
+    "recharts": "^3.5.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
